--- a/petshop/docker-compose.yaml
+++ b/petshop/docker-compose.yaml
@@ -5,10 +5,7 @@ services:
     image: postgres
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=petshopdb
-      - POSTGRES_USER=petshop
-      - POSTGRES_PASSWORD=spider111
+    env_file: .env
     container_name: db
     
   web:
@@ -19,6 +16,7 @@ services:
       - .:/app
     ports:
       - "8000:8000"
+    env_file: .env
     depends_on:
       - db
   redis:
