--- a/petshop/requirements.txt
+++ b/petshop/requirements.txt
@@ -18,12 +18,12 @@ Pillow==9.1.1
 prompt-toolkit==3.0.29
 psycopg2==2.9.3
 pyparsing==3.0.9
+pyTelegramBotAPI==4.5.1
 pytz==2022.1
 redis==4.3.3
 requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
-telebot==0.0.4
 urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
